fix: marginTop and marginBottom of .wrap should not be 0

--- a/hex_task4_index.scss
+++ b/hex_task4_index.scss
@@ -111,7 +111,8 @@ p {
 
 .wrap {
     max-width: $wrap-width;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0 $wrap-padding;
 }
 
